add elements and function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 
     <img src="./img/white_lamp.png" alt="" srcset="">
-    <button>Accendi</button>
+    <button id="light" onmouseover="lightbulbClick()">Accendi</button>
+    
+    <img src="./img/yellow_lamp.png" alt="">
 
     <script src="./main.js"></script>
 </body>
