--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
 </head>
 <body>
 
-    <img src="./img/white_lamp.png" alt="" srcset="">
-    <button id="light" onmouseover="lightbulbClick()">Accendi</button>
+    <img id="lighton" src="./img/white_lamp.png" style="width: 100%;" srcset="">
+    <button onclick="document.getElementById('light').src="./img/yellow_lamp.png">Accendi</button>
     
-    <img src="./img/yellow_lamp.png" alt="">
-
-    <script src="./main.js"></script>
 </body>
 </html>
