--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-    <img id="lighton" src="./img/white_lamp.png" style="width: 100%;" srcset="">
-    <button onclick="document.getElementById('light').src="./img/yellow_lamp.png">Accendi</button>
+    <img id="lighton" src="./img/white_lamp.png" style="width: 100px;" srcset="">
+    <button onclick="document.getElementById('lighton').src='./img/yellow_lamp.png'">Accendi</button>
     
 </body>
 </html>
